# chromaviz

./: .gitignore  Cargo.toml
chromaplay/: Cargo.toml
chromaviz/: Cargo.toml
chromaviz/src/: renderer.rs
chromaviz/src/chroma/: blur.rs  compositor.rs  render_target.rs
chromaviz/src/chroma/shaders/: Makefile  blur.frag  blur.frag.spv  blur.vert.spv  compositor.frag  compositor.frag.spv  particle.vert
examples/: basic.rs
src/: lib.rs  main.rs  renderer.rs
src/chroma/: blur.rs  compositor.rs  mod.rs  particle.rs  render_target.rs  swap_buffer.rs
src/chroma/shaders/: blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  blur_vert.frag.spv  compositor.frag  compositor.vert.spv  particle.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/renderer/: chroma.rs  mod.rs
src/renderer/shaders/: shader.vert  shader.vert.spv
