[package]
name = "chromaviz"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5"
glam = "0.9"
rand = "0.7"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
winit = "0.22"
