[package]
name = "chromaplay"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromaviz = { path = "chromaviz" }
winit = "0.23"
wgpu = "0.6"
futures = "0.3"
