[package]
name = "chroma"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromaviz = { path = "chromaviz" }
chromaplay = { path = "chromaplay" }
winit = "0.23"
wgpu = "0.6"
futures = "0.3"

[dependencies.native-dialog]
version = "0.4"
features = ["windows_dpi_awareness", "windows_visual_styles"]
