[package]
name = "chromaviz"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6"
glam = "0.11"
rand = "0.7"
futures = "0.3"
async-trait = "0.1"
bytemuck = "1.4"

[dev-dependencies]
winit = "0.23"
